--- a/app/src/main/res/layout/activity_google_maps.xml
+++ b/app/src/main/res/layout/activity_google_maps.xml
@@ -2,7 +2,7 @@
 <LinearLayout android:layout_height="match_parent"
     android:layout_width="match_parent"
     xmlns:android="http://schemas.android.com/apk/res/android"
-    android:weightSum="1"
+    android:weightSum="1.2"
     android:orientation="vertical"
     android:baselineAligned="false">
 
@@ -22,5 +22,12 @@
         android:layout_height="0dp"
         android:layout_weight="0.2"
         android:max="1000" />
+
+    <Button
+        android:id="@+id/button"
+        android:layout_width="match_parent"
+        android:layout_height="0dp"
+        android:layout_weight="0.2"
+        android:text="SSIJ MI PALE" />
 
 </LinearLayout>
